# CloudShell

./: .gitignore  ADR.md  AGENTS.md  CHANGELOG.md  CONTRIBUTIONS.md  CloudShell.sln  CloudShell.slnx  ControlPlane.http  LICENSE  README.md  TODO.md  dotnet-tools.json  goal.md
CloudShell.Abstractions.Tests/: ApplicationContainerHostResolverTests.cs  ApplicationContainerOrchestratorDeploymentFactoryTests.cs  ApplicationContainerRevisionServiceTests.cs  ApplicationProcessLogTests.cs  ApplicationProviderOperationsRegistrationTests.cs  ApplicationResourceCatalogTests.cs  ApplicationResourceExposureRoutesTests.cs  ApplicationResourceNamesTests.cs  ApplicationResourcePortResolverTests.cs  ApplicationResourceProjectionFactoryTests.cs  ApplicationResourceProjectionProfilesTests.cs  ApplicationResourceProjectorTests.cs  ApplicationResourceStoreTests.cs  ApplicationRuntimeStateTrackerTests.cs  ApplicationWorkloadConfigurationFactoryTests.cs  AspNetCoreProjectDefinitionNormalizationRuleTests.cs  AspNetCoreProjectEndpointDefinitionFactoryTests.cs  AspNetCoreProjectRuntimeTests.cs  AuthorizationTests.cs  BuiltInAuthorityHttpTests.cs  BuiltInProviderResourceManagerUiExtensionTests.cs  (+57 more)
Launchers/Python/cloudshell/: README.md  pyproject.toml
Launchers/Python/cloudshell/cloudshell/: __init__.py  launcher.py
Launchers/Python/cloudshell/tests/: test_launcher.py
sdk/python/cloudshell/: README.md  pyproject.toml  test.sh
sdk/python/cloudshell/cloudshell_sdk/: __init__.py  configuration.py  credential.py  environment.py  http.py  secrets.py
sdk/python/cloudshell/tests/: test_sdk.py
(+2846 files in other folders)
