[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudshell-launcher"
version = "0.1.0"
description = "Python launcher helpers for CloudShell ResourceTemplate app hosts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "CloudShell" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudshell*"]
