[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudshell-sdk"
version = "0.1.0"
description = "Python runtime SDK clients for CloudShell-managed services."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "CloudShell" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudshell_sdk*"]
